--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # Database Configuration
-spring.datasource.url=jdbc:h2:mem:creativeflow
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/creativeflow_db
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root1234
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # Server Configuration
 server.port=8080
